[gd_scene load_steps=2 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" path="res://scripts/test/test_components.gd" id="1_0a1b6"]

[node name="TestComponents" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0a1b6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Component Test Scene"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Custom Button"

[node name="TestPanel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Custom Panel"

[node name="TestDialog" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Modal Dialog"

[node name="TestHUD" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test HUD"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main" 